# Lighthouse-Agentic-Hub-The-AI-Readiness-Web-Auditor-Auto-Optimizer

./: .gitignore  Dockerfile  GEMINI.md  README.md  SPEC.md  agents-cli-manifest.yaml  lighthouse_agentic_hub.ipynb  pyproject.toml
sandbox/luminary-site/: index.html  llms.txt  style.css
tests/integration/: test_agent.py  test_confirmation.py  test_server_e2e.py
tests/unit/: test_mcp_server.py
workflows_sequential/: agent.py  fast_api_app.py  mcp_server.py  models.py
workflows_sequential/app_utils/: telemetry.py  typing.py
