[project]
name = "workflow-sequential"
version = "0.1.0"
description = "Lighthouse Agentic Hub: The AI-Readiness Web Auditor & Auto-Optimizer"
authors = [
    { name = "Tommy Wagner", email = "wagnerthomas@google.com" }
]
license = { text = "Apache License 2.0" }
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-adk>=1.5.0,<2.0.0",
    "google-cloud-aiplatform[adk,agent-engines]>=1.100.0,<2.0.0",
    "python-dotenv>=1.1.1,<2.0.0",
    "google-cloud-secret-manager>=2.24.0,<3.0.0",
    "beautifulsoup4>=4.12.0,<5.0.0",
    "mcp>=1.2.0,<2.0.0",
]

[dependency-groups]
dev = [
    "google-adk>=1.5.0,<2.0.0",
]
deployment = [
    "absl-py>=2.2.2",
    "google-cloud-aiplatform[adk,agent-engines]>=1.100.0",
]

[tool.ruff]
extend = "../../../pyproject.toml"

[tool.ruff.lint.isort]
known-first-party = ["workflow-sequential"]

[tool.agent-starter-pack.settings]
agent_directory = "workflow-sequential"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.wheel]
packages = ["workflows_sequential"]
